# LeBlancTempCodeStorage

./: Cargo.toml  TODO.txt  base_class.lb  build.rs  config.toml  core.lb  rust.lb  test.lb
.cargo/: config.toml
leblanc_bench/: criterion.toml
leblanc_bench/benches/: bench_runner.rs
leblanc_bench/benches/benchmarks/: mod.rs
leblanc_bench/benches/benchmarks/execution/: instruction_test.rs  leblanc_object_benches.rs  mod.rs
leblanc_bench/benches/benchmarks/memory/: mod.rs
leblanc_vm/: Cargo.toml
leblanc_vm/.cargo/: config.toml
leblanc_vm/src/: arch.rs  lbvm.rs  leblanc_type.rs  main.rs
leblanc_vm/src/builtin/: mod.rs  print.rs
leblanc_vm/src/lbvm/: class.rs  exception_handler.rs  frame.rs  heap.rs  instructions.rs  interpreter.rs  ivalue.rs  method.rs  object.rs  vm_storage.rs
leblanc_vm/src/leblanc/: copystring.rs  mod.rs  simplevec.rs  unsafe_vec.rs
leblanc_vm/src/test/: fib.rs  mod.rs  prime.rs  test_lbvm.rs
src/: leblanc.rs  lib.rs  main.rs  playground.rs
src/grammar/: leblanc.pest
src/leblanc/: compiler.rs  configuration.rs  core.rs  rustblanc.rs
src/leblanc/compiler/: bytecode.rs  char_reader.rs  compile.rs  compile_error_reporter.rs  compile_types.rs  compiler_util.rs  error.rs  fabric.rs  file_system.rs  generate.rs  generator.rs  grammar.rs  identifier.rs  import.rs  lang.rs  parser.rs  partial.rs  symbols.rs  syntax_rules.rs  token_stack_generator.rs  tokenizer.rs
src/leblanc/compiler/bytecode/: byte_limiter.rs  decompiled_constant.rs  extension_bytes.rs  file_body.rs  file_header.rs  function_bytes.rs  instruction_line_bytes.rs
src/leblanc/compiler/compile_types/: full_compiler.rs  full_reader.rs  partial_class.rs  partial_function.rs  partial_token.rs  stub_compiler.rs
src/leblanc/compiler/compiler_rewrite/: lexer.rs
src/leblanc/compiler/error/: snippet.rs  snippet_collection.rs
src/leblanc/compiler/file_system/: cached_directory.rs  dependency_path.rs  module.rs
src/leblanc/compiler/generator/: bytecode_generator.rs  cmpnt.rs  component.rs  conditional.rs  constant.rs  context.rs  converters.rs  dependency.rs  expression.rs  generator_types.rs  instruction_generator.rs  statement.rs
src/leblanc/compiler/grammar/: ast.rs  constant_evaluation.rs  converters.rs  grammar_structs.rs  leblanc.lalrpop  token_analyzer.rs
src/leblanc/compiler/identifier/: token.rs  token_identifier.rs  token_typer.rs  typed_token.rs
src/leblanc/compiler/lang/: leblanc_constants.rs  leblanc_keywords.rs  leblanc_lang.rs  leblanc_operators.rs
src/leblanc/compiler/parser/: ast.rs  ast_structs.rs  constant_evaluation.rs  error.rs  function_sorter.rs  generator.rs  import_manager.rs  leblanc.lalrpop  parse_structs.rs  rules.rs
src/leblanc/compiler3/: leblanc_type.rs  mod.rs
src/leblanc/compiler3/symbols/: byte_layout.rs  bytecode_generator.rs  converted.rs  cst.rs  lower_symbols.rs  mod.rs  symbol_table.rs  table_generator.rs
src/leblanc/core/: bytecode.rs  exception.rs  heap.rs  internal.rs  interpreter.rs  leblanc_argument.rs  leblanc_context.rs  leblanc_default_data.rs  leblanc_handle.rs  leblanc_object.rs  method.rs  method_handler.rs  method_store.rs  method_tag.rs  module.rs  native_types.rs  partial_function.rs  utils.rs
src/leblanc/core/bytecode/: byte_limiter.rs  decompiled_constant.rs  extension_bytes.rs  file_body.rs  file_header.rs  function_bytes.rs  instruction_line_bytes.rs  precompiled.rs
src/leblanc/core/internal/: internal_list_iterator.rs  internal_range_generator.rs  methods.rs  reflection.rs  transformed_iterator.rs
src/leblanc/core/interpreter/: execution_context.rs  frame.rs  instruction_execution.rs  instruction_execution2.rs  (+4 more)
src/leblanc/include/: lib.rs
src/leblanc/rustblanc/: berry_mutex.rs  better_static.rs  blueberry.rs  bridge.rs  component_map.rs  copystring.rs  exception.rs  generic_data.rs  heap.rs  hex.rs  lazy_store.rs  lb_file.rs  lib.rs  low.rs  macros.rs  outcome.rs  packed_number.rs  path.rs  relationship.rs  rust_override.rs  strawberry.rs  types.rs  unsafe_raw_vec.rs  unsafe_vec.rs  utils.rs
syntax/: codeblock.lb  lambda.java  leblanc_types.rs  loops.lb  string_utils.lb  switch.lb
syntax/examples/: block.lb  class.lb  compile-time-switch.lb  error_catching.lb  extensions.lb  fastlb.lb  group1.lb  guards.lb  lambda.lb  real_program.lb  runtime-switch.lb
syntax/extreme_tests/all_features/: all_features.lb  parse_speed_test.lb
syntax/skeleton/lazy/: main.lb
syntax/skeleton/leblanc/: .skeleton.lb
syntax/skeleton/project/: .skeleton.lb
test/: .skeleton.lb  test.lb
test/dir1/: .skeleton.lb  sf1.lb
test/dir2/: sf2.lb
(+71 files in other folders)
