
[package]
name = "leblanc"
version = "0.1.0"
edition = "2021"



[build-dependencies]
lalrpop = "0.19.8"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filepath = "0.1.2"
clicolors-control = "1.0.1"
regex = "1.5.6"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
chrono = "0.4.19"
hex = "0.4.3"
prettytable-rs = "0.8.0"
mimalloc = { version = "*", default-features = false }
parking_lot = "0.12.1"
fxhash = "0.2.1"
arrayvec = "0.7.2"
rand_chacha = "0.3.1"
num = "0.4.0"
smol_str = "0.1.23"
lazy_static = "1.4.0"
futures = "0.3.21"
tokio = { version = "1.19.2", features=["full"] }
async-std = "1.12.0"
lalrpop-util = {version = "0.19.8", features=["lexer"]}
codespan-reporting = "0.11.1"
codespan = "0.11.1"



#[target.'cfg(target_env = "x86_64-unknown-linux-gnu")']
#linker = "/usr/bin/clang"
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.dev]
opt-level = 3
debug = true

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
debug = true

