
[package]
name = "leblanc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

#[lib]
#name = "leblanc"
#path = "src/lib.rs"

#[[bin]]
#name = "leblanc"
#path = "src/main.rs"
#doc = false


[build-dependencies]
lalrpop = "0.19.8"
winres = "0.1.12"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filepath = "0.1.2"
clicolors-control = "1.0.1"
regex = "1.5.6"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
hex = "0.4.3"
prettytable-rs = "0.9.0"
parking_lot = { version = "0.12.1", feautres = ["nightly", "serde"] }
fxhash = "0.2.1"
num = "0.4.0"
rand_chacha = "0.3.1"
chrono = "0.4.22"
smol_str = "0.1.23"
lazy_static = "1.4.0"
futures = "0.3.21"
tokio = { version = "1.19.2", features=["full"] }
async-std = "1.12.0"
lalrpop-util = {version = "0.19.8", features=["lexer"]}
codespan-reporting = "0.11.1"
codespan = "0.11.1"
glob = "0.3.0"
proc-macro2 = "1.0.40"
quote = "1.0.20"
serde = {version = "1.0.145", features = ["derive", "rc"]}
serde_json = "1.0.85"
bumpalo = "3.11.0"
num-format = "0.4.3"
libc = "0.2.135"
cfg-if = "1.0.0"
enum-as-inner = "0.5.1"


[features]
playground = []
debug = []

[target.'cfg(any(target_env = "msvc", debug_assertions))'.dependencies]
mimalloc = { version = "0.1.30", default-features = false }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"


[profile.dev]
debug = true
codegen-units = 255

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
debug = true

[profile.release.build-override]
opt-level = 3
codegen-units = 16
