[package]
name = "leblanc_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"

[target.'cfg(any(target_env = "msvc", debug_assertions))'.dependencies]
mimalloc = { version = "0.1.30", default-features = false }

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
debug = true
